--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -1285,7 +1285,23 @@ None - no buttons, only the slider</string>
                             <string>Round all tabs</string>
                         </property>
                     </widget>
-                    <spacer row="7" column="1">
+                    <widget class="QCheckBox" row="4" column="0">
+                        <property name="name">
+                            <cstring>borderTab</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Draw a light border around tab widget</string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="5" column="0">
+                        <property name="name">
+                            <cstring>borderInactiveTab</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Draw inner border of inactive tabs</string>
+                        </property>
+                    </widget>
+                    <spacer row="8" column="1">
                         <property name="name">
                             <cstring>spacer23</cstring>
                         </property>
@@ -1298,19 +1314,11 @@ None - no buttons, only the slider</string>
                         <property name="sizeHint">
                             <size>
                                 <width>20</width>
-                                <height>354</height>
+                                <height>320</height>
                             </size>
                         </property>
                     </spacer>
-                    <widget class="QCheckBox" row="4" column="0">
-                        <property name="name">
-                            <cstring>borderTab</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Draw a light border around tab widget</string>
-                        </property>
-                    </widget>
-                    <widget class="KIntNumInput" row="6" column="1">
+                    <widget class="KIntNumInput" row="7" column="1">
                         <property name="name">
                             <cstring>tabBgnd</cstring>
                         </property>
@@ -1318,7 +1326,7 @@ None - no buttons, only the slider</string>
                             <string>%</string>
                         </property>
                     </widget>
-                    <widget class="QLabel" row="6" column="0">
+                    <widget class="QLabel" row="7" column="0">
                         <property name="name">
                             <cstring>textLabel1_19</cstring>
                         </property>
@@ -1326,12 +1334,12 @@ None - no buttons, only the slider</string>
                             <string>Alter background by:</string>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="5" column="0">
+                    <widget class="QCheckBox" row="6" column="0">
                         <property name="name">
-                            <cstring>borderInactiveTab</cstring>
+                            <cstring>invertBotTab</cstring>
                         </property>
                         <property name="text">
-                            <string>Draw inner border of inactive tabs</string>
+                            <string>Invert shade of bottom tabs</string>
                         </property>
                     </widget>
                 </grid>
@@ -2555,6 +2563,7 @@ None - no buttons, only the slider</string>
     <tabstop>roundAllTabs</tabstop>
     <tabstop>borderTab</tabstop>
     <tabstop>borderInactiveTab</tabstop>
+    <tabstop>invertBotTab</tabstop>
     <tabstop>tabBgnd</tabstop>
     <tabstop>shadeCheckRadio</tabstop>
     <tabstop>customCheckRadioColor</tabstop>
