Add UI for new config options; dwtAppearance, xbar, check/radio colour, small radio dots, and splitter background highlighting

--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -500,12 +500,12 @@
                         </property>
                         <property name="sizeHint">
                             <size>
-                                <width>53</width>
-                                <height>7</height>
+                                <width>406</width>
+                                <height>16</height>
                             </size>
                         </property>
                     </spacer>
-                    <spacer row="1" column="1">
+                    <spacer row="2" column="1">
                         <property name="name">
                             <cstring>spacer12_2</cstring>
                         </property>
@@ -517,11 +517,19 @@
                         </property>
                         <property name="sizeHint">
                             <size>
-                                <width>3</width>
-                                <height>19</height>
+                                <width>16</width>
+                                <height>482</height>
                             </size>
                         </property>
                     </spacer>
+                    <widget class="QCheckBox" row="1" column="0" rowspan="1" colspan="2">
+                        <property name="name">
+                            <cstring>splitterHighlight</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Highlight background on mouse-over</string>
+                        </property>
+                    </widget>
                 </grid>
             </widget>
             <widget class="QWidget">
@@ -1392,14 +1400,6 @@ None - no buttons, only the slider</string>
                             <string>'X' style checkmarks</string>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="2" column="0" rowspan="1" colspan="4">
-                        <property name="name">
-                            <cstring>crHighlight</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Highlight text background</string>
-                        </property>
-                    </widget>
                     <spacer row="0" column="4">
                         <property name="name">
                             <cstring>spacer25</cstring>
@@ -1417,7 +1417,7 @@ None - no buttons, only the slider</string>
                             </size>
                         </property>
                     </spacer>
-                    <spacer row="4" column="2">
+                    <spacer row="6" column="2">
                         <property name="name">
                             <cstring>spacer26</cstring>
                         </property>
@@ -1430,16 +1430,40 @@ None - no buttons, only the slider</string>
                         <property name="sizeHint">
                             <size>
                                 <width>20</width>
-                                <height>360</height>
+                                <height>364</height>
                             </size>
                         </property>
                     </spacer>
-                    <widget class="QCheckBox" row="3" column="0" rowspan="1" colspan="2">
+                    <widget class="QCheckBox" row="3" column="0" rowspan="1" colspan="4">
+                        <property name="name">
+                            <cstring>crHighlight</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Highlight text background on mouse-over</string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="4" column="0" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>crButton</cstring>
                         </property>
                         <property name="text">
                             <string>Button like</string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="2" column="0" rowspan="1" colspan="3">
+                        <property name="name">
+                            <cstring>smallRadio</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Small radio 'dot'</string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="5" column="0" rowspan="1" colspan="2">
+                        <property name="name">
+                            <cstring>crColor</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Color when selected</string>
                         </property>
                     </widget>
                 </grid>
@@ -1929,12 +1953,72 @@ None - no buttons, only the slider</string>
                     </widget>
                 </grid>
             </widget>
-            <widget class="QWidget">
+<widget class="QWidget">
                 <property name="name">
                     <cstring>WStackPage</cstring>
                 </property>
                 <attribute name="id">
                     <number>14</number>
+                </attribute>
+                <grid>
+                    <property name="name">
+                        <cstring>unnamed</cstring>
+                    </property>
+                    <widget class="QLabel" row="1" column="0">
+                        <property name="name">
+                            <cstring>textLabel1_20</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Titlebar appearance:</string>
+                        </property>
+                    </widget>
+                    <widget class="QComboBox" row="1" column="2">
+                        <property name="name">
+                            <cstring>dwtAppearance</cstring>
+                        </property>
+                    </widget>
+                    <spacer row="0" column="3">
+                        <property name="name">
+                            <cstring>spacer28_4</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Horizontal</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Expanding</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>18</width>
+                                <height>3</height>
+                            </size>
+                        </property>
+                    </spacer>
+                    <spacer row="2" column="1">
+                        <property name="name">
+                            <cstring>spacer29</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Vertical</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Expanding</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>6</width>
+                                <height>85</height>
+                            </size>
+                        </property>
+                    </spacer>
+                </grid>
+            </widget>
+            <widget class="QWidget">
+                <property name="name">
+                    <cstring>WStackPage</cstring>
+                </property>
+                <attribute name="id">
+                    <number>15</number>
                 </attribute>
                 <grid>
                     <property name="name">
@@ -2027,7 +2111,7 @@ None - no buttons, only the slider</string>
                     <cstring>WStackPage</cstring>
                 </property>
                 <attribute name="id">
-                    <number>15</number>
+                    <number>16</number>
                 </attribute>
                 <grid>
                     <property name="name">
@@ -2293,7 +2377,7 @@ None - no buttons, only the slider</string>
                     <cstring>WStackPage</cstring>
                 </property>
                 <attribute name="id">
-                    <number>16</number>
+                    <number>17</number>
                 </attribute>
                 <grid>
                     <property name="name">
@@ -2521,6 +2605,7 @@ None - no buttons, only the slider</string>
     <tabstop>unifySpinBtns</tabstop>
     <tabstop>unifySpin</tabstop>
     <tabstop>splitters</tabstop>
+    <tabstop>splitterHighlight</tabstop>
     <tabstop>sliderAppearance</tabstop>
     <tabstop>shadeSliders</tabstop>
     <tabstop>customSlidersColor</tabstop>
@@ -2568,8 +2653,10 @@ None - no buttons, only the slider</string>
     <tabstop>shadeCheckRadio</tabstop>
     <tabstop>customCheckRadioColor</tabstop>
     <tabstop>xCheck</tabstop>
+    <tabstop>smallRadio</tabstop>
     <tabstop>crHighlight</tabstop>
     <tabstop>crButton</tabstop>
+    <tabstop>crColor</tabstop>
     <tabstop>titlebarAppearance</tabstop>
     <tabstop>inactiveTitlebarAppearance</tabstop>
     <tabstop>titlebarButtonAppearance</tabstop>
@@ -2603,6 +2690,7 @@ None - no buttons, only the slider</string>
     <tabstop>popupBorder</tabstop>
     <tabstop>toolbarAppearance</tabstop>
     <tabstop>toolbarSeparators</tabstop>
+    <tabstop>dwtAppearance</tabstop>
     <tabstop>gtkButtonOrder</tabstop>
     <tabstop>mapKdeIcons</tabstop>
     <tabstop>fixParentlessDialogs</tabstop>
